fix heat map days alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,17 +33,10 @@
   }
 }
 
-*{
-  scrollbar-width: 1vw;
-}
-
 ::-webkit-scrollbar{
-  width: 0.5vw;
+  width: 1px;
 }
 ::-webkit-scrollbar-thumb{
   border-radius: 2rem;
-  background-color: theme("colors.primary");
-}
-::-webkit-scrollbar-track{
-  /* background-color: theme("colors.dark"); */
+  background-color: rgb(39, 39, 39);
 }
